AX: HTML5 landmark (and related) elements should not be ignored. https://bugs.webkit.org/show_bug.cgi?id=135116

Patch by Takeshi Kurosawa <taken.spc@gmail.com> on 2014-09-09
Reviewed by Chris Fleizach.

Make sure following element should not be ignored in computeAccessibilityIsIgnored
- header, aside, address, main, nav, article, section
- dt, dd

Source/WebCore:

Tests: platform/mac/accessibility/descriptionlist-not-ignored.html
       platform/mac/accessibility/landmark-not-ignored.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored):

LayoutTests:

* platform/mac/accessibility/descriptionlist-not-ignored-expected.txt: Added.
* platform/mac/accessibility/descriptionlist-not-ignored.html: Added.
* platform/mac/accessibility/landmark-not-ignored-expected.txt: Added.
* platform/mac/accessibility/landmark-not-ignored.html: Added.

Canonical link: https://commits.webkit.org/154480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173428 268f45cc-cd09-0410-ab3c-d52691b4dbfc